# siq-research-engine

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .hadolint.yaml  .pre-commit-config.yaml  AGENTS.md  IMPLEMENTATION_GUIDE.md  LICENSE.zh-CN.md  NOTICE  README.md  THIRD_PARTY_LICENSES.md  UI_DESIGN_REVIEW.md  UI_INCONSISTENCY_ANALYSIS.md  docker-compose.yml  mkdocs.yml  mypy.ini  ruff.toml  start_all.sh  supervisord.conf  vercel.json
apps/api/: Dockerfile  README.md  database.py  hermes-api-multi-turn.md  main.py  meeting_stream_gateway.py  models.py  pyproject.toml  schemas.py  seed.py  start.sh
apps/api/migrations/: 001_create_auth_tables.sql  002_create_meeting_tables.sql  003_create_meeting_import_tables.sql  004_create_meeting_native_capture_tables.sql  005_create_meeting_native_capture_finalization_tables.sql  006_create_runtime_coordination_tables.sql  007_create_meeting_native_capture_manifest_entries.sql  008_add_meeting_native_capture_epoch_manifest_digest.sql  009_add_user_token_version.sql  010_create_workflow_queue_jobs.sql  README.md
apps/api/routers/: __init__.py  achievements.py  agent.py  agent_chat_router.py  agent_user_router.py  analysis.py  auth.py  chat.py  deals.py  document_parser.py  downloads.py  eval_e2e.py  factchecker.py  legal.py  market_reports.py  meeting_exports.py  meeting_imports.py  meeting_native_captures.py  meeting_stream.py  meetings.py  pet.py  primary_market_materials.py  primary_market_meeting.py  research_universe.py  settings.py  source.py  system.py  tracking.py  tracking_agent.py  wiki.py  workflow.py  workspace.py
apps/api/scripts/: audit_async_sync_session.py  create_database.py  init_auth_system.py  meeting_ai_worker.py  meeting_export_worker.py  meeting_import_worker.py  meeting_native_capture_worker.py  meeting_retention_worker.py  reconcile_meeting_deletion_tombstones.py  reconcile_meeting_voiceprint_tombstones.py  run_meeting_voiceprint_worker.py  run_migrations.py  start_meeting_voiceprint_worker.sh  workflow_worker.py
apps/api/services/: achievement_checker.py  agent_chat_runtime.py  agent_chat_runtime_impl.py  agent_memory_analytics.py  agent_memory_milvus.py  agent_memory_service.py  agent_runtime_answer_audit.py  agent_runtime_attachments.py  agent_runtime_catalog.py  agent_runtime_citations.py  agent_runtime_context.py  agent_runtime_dedupe.py  agent_runtime_diagnostics.py  agent_runtime_display.py  agent_runtime_fallback_contexts.py  agent_runtime_financial_claim_verifier.py  agent_runtime_financial_evidence.py  agent_runtime_financial_format.py  agent_runtime_financial_guard.py  agent_runtime_financial_provenance.py  agent_runtime_financial_sources.py  agent_runtime_financial_trace.py  agent_runtime_guardrail_text.py  agent_runtime_history.py  agent_runtime_loop_guard.py  agent_runtime_market_facts.py  agent_runtime_memory.py  agent_runtime_message_identity.py  agent_runtime_parse_only.py  agent_runtime_postgres_fallback.py  agent_runtime_preflight.py  agent_runtime_progress.py  agent_runtime_sec_dimensions.py  agent_runtime_sessions.py  agent_runtime_source_fields.py  agent_runtime_statement_context.py  agent_runtime_streaming.py  agent_runtime_task_ids.py  agent_runtime_tool_output.py  agent_runtime_tools.py  (+133 more)
apps/api/tests/: conftest.py  fact_surface_hash.py  research_universe_fixture.py  specialist_workflow_fixture.py  test_agent_chat_runtime_attachments.py  test_agent_chat_runtime_loops.py  test_agent_memory_analytics.py  test_agent_memory_message_identity.py  test_agent_memory_milvus.py  test_agent_memory_service.py  test_agent_router_attachments.py  test_agent_runtime_active_runs.py  test_agent_runtime_answer_audit.py  test_agent_runtime_catalog.py  test_agent_runtime_chat_preflight.py  test_agent_runtime_citations.py  test_agent_runtime_context.py  test_agent_runtime_dedupe.py  test_agent_runtime_diagnostics.py  test_agent_runtime_display.py  test_agent_runtime_fallback_contexts.py  test_agent_runtime_financial_claim_verifier.py  test_agent_runtime_financial_evidence.py  test_agent_runtime_financial_format.py  test_agent_runtime_financial_guard.py  test_agent_runtime_financial_sources.py  test_agent_runtime_financial_trace.py  test_agent_runtime_history.py  test_agent_runtime_loop_guard.py  test_agent_runtime_market_facts.py  test_agent_runtime_memory.py  test_agent_runtime_parse_only.py  test_agent_runtime_postgres_fallback.py  test_agent_runtime_preflight.py  test_agent_runtime_progress.py  test_agent_runtime_sec_dimensions.py  test_agent_runtime_statement_context.py  test_agent_runtime_streaming.py  test_agent_runtime_task_ids.py  test_agent_runtime_tool_output.py  (+156 more)
infra/model-services/meeting-speech/: README.md  meeting-speech.env.example  pyproject.toml  siq-meeting-speech.service.example  start_meeting_speech.sh
services/market-report-finder/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/market-report-finder/tests/: test_app_auth.py  test_cninfo_client.py  test_dart_client.py  test_downloader.py  test_edinet_client.py  test_eu_client.py  test_foreign_aliases.py  test_hkex_client.py  test_jp_service.py  test_kr_catalog.py  test_report_assist.py  test_sec_client.py  test_tdnet_client.py
services/market-report-rules/: Dockerfile  README.md  pyproject.toml
services/market-report-rules/sql/: 001_market_rules_staging.sql
services/market-report-rules/tests/: test_api.py  test_eu_esef_evidence_package.py  test_eu_pdf_evidence_package.py  test_eu_rules.py  test_evidence_package_contract.py  test_hk_evidence_package.py  test_hk_rules.py  test_jp_kr_evidence_package.py  test_jp_kr_rules.py  test_normalization.py  test_quality_gate_adapter.py  test_us_evidence_package_contract.py  test_us_rules.py  test_validation_source_selection.py
services/report-finder/: .env.example  API_GUIDE.md  Dockerfile  README.md  pyproject.toml
services/report-finder/scripts/: cninfo_live_smoke.py  playwright_smoke.py
services/report-finder/static/: app.js
services/report-finder/templates/: index.html
services/report-finder/tests/: test_api.py  test_cninfo_adapter.py  (+3 more)
(+2903 files in other folders)
