[project]
name = "siq-assistant-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "httpx[socks]>=0.27",
    "aiosqlite>=0.22.1",
    "sse-starlette>=3.4.2",
    "greenlet>=3.5.0",
    "psycopg[binary]>=3.2",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.20",
    "email-validator>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "pymilvus>=2.4.0",
    "siq-market-contracts",
]

[tool.uv.sources]
siq-market-contracts = { path = "../../packages/market-contracts", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
