[project]
name = "siq-assistant-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "starlette>=1.3.1",
    "idna>=3.15",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "httpx[socks]>=0.27",
    "cryptography>=45.0.0",
    "aiosqlite>=0.22.1",
    "sse-starlette>=3.4.2",
    "greenlet>=3.5.0",
    "psycopg[binary]>=3.2",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.20",
    "email-validator>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "pymilvus>=2.4.0",
    "siq-market-contracts",
    "python-docx>=1.1,<2",
    "jsonschema>=4.23",
]

[tool.uv.sources]
siq-market-contracts = { path = "../../packages/market-contracts", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff==0.14.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: requires live network access or an external service",
    "slow: requires local runtime data or is unsuitable for the PR quick gate",
]
