[project]
name = "market-report-rules-service"
version = "0.1.0"
description = "Market-isolated report extraction, validation, and load-plan rules service."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "starlette>=1.3.1",
    "idna>=3.15",
    "httpx>=0.28.0",
    "pydantic>=2.8.0",
    "siq-market-contracts",
    "uvicorn[standard]>=0.30.0",
]

[tool.uv.sources]
siq-market-contracts = { path = "../../packages/market-contracts", editable = true }

[project.optional-dependencies]
dev = [
    "beautifulsoup4>=4.15.0",
    "httpx>=0.28.0",
    "lxml>=6.1.1",
    "pytest>=8.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market_report_rules_service"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
